[tool.poetry]
name = "tts-amr"
version = "0.1.0"
description = ""
authors = ["bestk <1138493417@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
requests = "^2.31.0"
python-multipart = "^0.0.9"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
